# stock_movement_analyzer_agent

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  example_report.md  langgraph.json  pyproject.toml
src/: __init__.py  __main__.py  cli.py  config.py  credibility.py  graph.py  market_data.py  nodes.py  prompts.py  routing.py  search.py  state.py
tests/: test_credibility.py  test_graph.py  test_reporting.py  test_routing.py
